--- a/References.bib
+++ b/References.bib
@@ -3482,6 +3482,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   publisher = {Dover Publications},
   year      = {2002},
   author    = {\"{O}zi\c{s}ik, M. Necati},
+  address   = {New York, NY},
 }
 
 @Article{RUIZCALVO2016720,
@@ -4094,6 +4095,34 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   abstract = {Ground-coupled heat pumps are increasingly being utilized to heat and cool buildings. Although it is difficult to size and to predict their behavior and performance, their design can be optimized via simulations. EnergyPlus is a popular energy simulation program for modeling building heating and other energy flows and, since it is organized to consider borehole heat exchangers via the well-known g-functions approach, it can be used advantageously for that purpose. The Capacity Resistance Model is another recent numerical simulation tool devoted to ground and borehole heat exchangers. In this work, two methods to calculate the g-fucntions were analyzed, using as case-study a real office building, whose imbalance between the heat extracted and injected into the ground was found to be appreciable. The energy imbalance involves a ground temperature drift affecting the system efficiency. The results of the EnergyPlus g-functions and the Capacity Resistance Model model approaches were compared. The capacity of the two methodologies to accurately simulate this phenomenon were analysed also with reference to the available building's long-term monitoring data. The analysis showed the importance of using g-functions suitable to reflect the layout of the borehole field, in order to correctly evaluate the energy performance of the entire ground source heat pump system.<br/> Copyright &copy; 2018 ASHRAE.},
   keywords = {Energy efficiency;Heat resistance;Numerical methods;Numerical models;Office buildings;Pumps;},
   url      = {10.1080/23744731.2018.1438663},
+}
+
+@Article{LOVERIDGE2014122,
+  author   = {Fleur Loveridge and William Powrie},
+  title    = {{2D thermal resistance of pile heat exchangers}},
+  journal  = {Geothermics},
+  year     = {2014},
+  volume   = {50},
+  pages    = {122--135},
+  issn     = {0375-6505},
+  abstract = {Structural foundation piles are being used increasingly as heat exchangers to provide renewable heat for new buildings. To design such energy systems a steady state is assumed within the pile, which is conventionally characterised by constant thermal resistance. However, there has been little research regarding pile resistance and there are few published case studies. Numerical modelling results are presented here to provide typical values of pile resistance, depending on the details of the heat exchange pipes. Analysis suggests large diameter piles may take several days to reach steady state; in these cases a transient design approach may be more appropriate.},
+  doi      = {https://doi.org/10.1016/j.geothermics.2013.09.015},
+  keywords = {Geothermal, Piled foundations, Ground energy, Thermal resistance, Ground heat exchangers},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0375650513000898},
+}
+
+@Article{LOVERIDGE2013554,
+  author   = {Fleur Loveridge and William Powrie},
+  title    = {{Temperature response functions (G-functions) for single pile heat exchangers}},
+  journal  = {Energy},
+  year     = {2013},
+  volume   = {57},
+  pages    = {554--564},
+  issn     = {0360-5442},
+  abstract = {Foundation piles used as heat exchangers as part of a ground energy system have the potential to reduce energy use and carbon dioxide emissions from new buildings. However, current design approaches for pile heat exchangers are based on methods developed for boreholes which have a different geometry, with a much larger aspect (length to diameter) ratio. Current methods also neglect the transient behaviour of the pile concrete, instead assuming a steady state resistance for design purposes. As piles have a much larger volume of concrete than boreholes, this neglects the significant potential for heat storage within the pile. To overcome these shortcomings this paper presents new pile temperature response functions (G-functions) which are designed to reflect typical geometries of pile heat exchangers and include the transient response of the pile concrete. Owing to the larger number of pile sizes and pipe configurations which are possible with pile heat exchangers it is not feasible to developed a single unified G-function and instead upper and lower bound solutions are provided for different aspects ratios.},
+  doi      = {https://doi.org/10.1016/j.energy.2013.04.060},
+  keywords = {Ground heat exchanger, Pile, Ground energy system, Ground source heat pump system},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0360544213003757},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
