--- a/References.bib
+++ b/References.bib
@@ -4135,4 +4135,24 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   doi     = {10.1088/1742-6596/1224/1/012026},
 }
 
+@InProceedings{ClaessonEsklson1985,
+  author       = {Claesson, J. and Eskilson, P.},
+  title        = {Thermal analysis of heat extraction boreholes},
+  booktitle    = {3rd International Conference on Energy Storage for Building Heating and Cooling--Enerstock 85},
+  year         = {1985},
+  pages        = {222--227},
+  address      = {Toronto, Canada},
+  organization = {Public Works and Government Services Canada},
+}
+
+@Article{ZengDiaoFang2002,
+  author  = {Zeng, H. Y. and Diao, N. R. and Fang, Z. H.},
+  title   = {A finite line-source model for boreholes in geothermal heat exchangers},
+  journal = {Heat Transfer - Asian Research},
+  year    = {2002},
+  volume  = {31},
+  number  = {7},
+  pages   = {558--567},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
