--- a/References.bib
+++ b/References.bib
@@ -4155,4 +4155,32 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   pages   = {558--567},
 }
 
+@Misc{pygfunction,
+  author       = {Massimo Cimmino},
+  title        = {pygfunction v1.1.0},
+  howpublished = {Zenodo},
+  year         = {2018},
+  note         = {10.5281/zenodo.1195040},
+  doi          = {10.5281/zenodo.1195040},
+}
+
+@InProceedings{AcunaFossaMonzoPalm2012,
+  author    = {Jos\'e Acu{\~{n}}a and M. Fossa and Patricia Monz\'o and B. Palm},
+  title     = {Numerically generated g-functions for ground-coupled heat pump applications},
+  booktitle = {Proceedings of the COMSOL Conference},
+  year      = {2012},
+  pages     = {6},
+  address   = {Milan, Milan},
+}
+
+@InProceedings{MonzoAcunaFossaPalm2013,
+  author    = {Patricia Monz\'o and Jos\'e Acu{\~n}a and M. Fossa and B. Palm},
+  title     = {Numerical generation of the temperature response factors for a borehole heat exchanger field},
+  booktitle = {Proceedings of European Geothermal Congress},
+  year      = {2013},
+  pages     = {1--8},
+  address   = {Pisa, Italy},
+  note      = {June 3--7},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
