--- a/References.bib
+++ b/References.bib
@@ -3439,17 +3439,6 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   url      = {http://www.sciencedirect.com/science/article/pii/S1359431118305921},
 }
 
-@InProceedings{BrussieuxBernier,
-  author       = {Yves Brussieux and Bichel Bernier},
-  title        = {A hybrid model for generating short-time g-functions},
-  booktitle    = {IGSHPA Research Conference Proceedings},
-  year         = {2018},
-  pages        = {48--57},
-  address      = {Stockholm, Sweden},
-  organization = {IGSHPA},
-  note         = {September 18-19},
-}
-
 @Article{VANDERHEIJDE2017158,
   author   = {B. {van der Heijde} and M. Fuchs and C. Ribas Tugores and G. Schweiger and K. Sartor and D. Basciotti and D. M{\"{u}}ller and C. Nytsch-Geusen and M. Wetter and L. Helsen},
   title    = {Dynamic equation-based thermo-hydraulic pipe model for district heating and cooling systems},
@@ -3913,12 +3902,12 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   note      = {January 18--22},
 }
 
-@InProceedings{Brussieux2018_IGSHPA,
+@InProceedings{BrussieuxBernier2018,
   author       = {Yves Brussieux and Michel Bernier},
   title        = {A hybrid model for generating short-time g-functions},
   booktitle    = {IGSHPA Research Conference Proceedings},
   year         = {2018},
-  pages        = {48--56},
+  pages        = {48--57},
   address      = {Stockholm, Sweden},
   organization = {IGSHPA},
   note         = {September 18--19},
@@ -4181,6 +4170,30 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   pages     = {1--8},
   address   = {Pisa, Italy},
   note      = {June 3--7},
+}
+
+@Book{Patankar1991,
+  title     = {Computation of conduction and duct flow heat transfer},
+  publisher = {Innovative Research, Inc.},
+  year      = {1991},
+  author    = {Suhas V. Patankar},
+  address   = {Maple Grove, MN},
+}
+
+@PhdThesis{AlberdiPagolaPhD2018,
+  author  = {Maria Alberdi-Pagola},
+  title   = {Design and performance of energy pile foundations},
+  school  = {Aalborg University},
+  year    = {2018},
+  address = {Aalborg, Denmark},
+}
+
+@Misc{BLOCON_EED,
+  author       = {BLOCON},
+  title        = {{Earth Energy Designer (EED) Version 4 Update Manual}},
+  howpublished = {Online},
+  year         = {2017},
+  note         = {Retrieved February 13, 2019 from https://buildingphysics.com/eed-2/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
