--- a/References.bib
+++ b/References.bib
@@ -3579,7 +3579,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   url      = {http://www.sciencedirect.com/science/article/pii/S0306261915005334},
 }
 
-@Article{Onsager1931,
+@Article{Onsager1931Part1,
   author  = {Lars Onsager},
   title   = {Reciprocal relations in irreversible processes. {I}},
   journal = {Physical Review},
@@ -4195,5 +4195,33 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   year         = {2017},
   note         = {Retrieved February 13, 2019 from https://buildingphysics.com/eed-2/},
 }
+
+@Book{Moin2010,
+  title     = {Fundamentals of engineering numerical analysis},
+  publisher = {Cambridge University Press},
+  year      = {2010},
+  author    = {Parviz Moin},
+  address   = {New York, NY},
+}
+
+@Article{Mazur1997,
+  author  = {P. Mazur},
+  title   = {Onsanger's reciprocal relations and thermodynamics of irreversible processes},
+  journal = {Periodica Polytechnica Ser. Chem. Eng.},
+  year    = {1997},
+  volume  = {41},
+  number  = {2},
+  pages   = {197--207},
+}
+
+@Article{Onsager1931Part2,
+  author  = {Lars Onsager},
+  title   = {Reciprocal relations in irreversible processes. {II}},
+  journal = {Physical Review},
+  year    = {1931},
+  volume  = {38},
+  pages   = {2265--2279},
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
