--- a/References.bib
+++ b/References.bib
@@ -3898,7 +3898,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   title     = {Design of residential ground source heat pump systems for heating dominated climates -- trade-offs between ground heat exchanger design and supplementary electric resistance heating},
   booktitle = {ASHRAE Winter Conference},
   year      = {2014},
-  address   = {New York},
+  address   = {New York, NY},
   note      = {January 18--22},
 }
 
@@ -4222,6 +4222,5 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   volume  = {38},
   pages   = {2265--2279},
 }
-
 
 @Comment{jabref-meta: databaseType:bibtex;}
