adding refs. updating locations

--- a/References.bib
+++ b/References.bib
@@ -1612,7 +1612,7 @@
   title     = {A load-aggregation method to calculate extraction temperatures of borehole heat exchangers},
   booktitle = {ASHRAE Winter Conference},
   year      = {2012},
-  address   = {Chicago},
+  address   = {Chicago, IL},
   note      = {January 21--25},
 }
 
@@ -1713,7 +1713,7 @@
   publisher = {University Press},
   year      = {1884},
   pages     = {41--60},
-  address   = {Cambridge},
+  address   = {Cambridge, UK},
 }
 
 @TechReport{ClaessonDunand1983,
@@ -1750,7 +1750,7 @@
   title     = {Limitation of using uniform heat flux assumptions in sizing vertical borehole heat exchanger fields},
   booktitle = {Proceedings of CLIMA 2013},
   year      = {2013},
-  address   = {Prague},
+  address   = {Prague, Czech Republic},
   note      = {June 16--19},
 }
 
@@ -2155,7 +2155,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title     = {Deep boreholes for ground source heat pump systems--{Scandinavian} experience and future prospects},
   booktitle = {ASHRAE Winter Conference},
   year      = {2016},
-  address   = {Chicago},
+  address   = {Chicago, IL},
   note      = {January 23--27},
 }
 
@@ -2320,7 +2320,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   booktitle    = {IGSHPA Research Conference Proceedings},
   year         = {2017},
   pages        = {18--25},
-  address      = {Denver},
+  address      = {Denver, CO},
   organization = {IGSHPA},
   note         = {March 14--16},
 }
@@ -2345,7 +2345,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   booktitle    = {IGSHPA Research Conference Proceedings},
   year         = {2017},
   pages        = {144--151},
-  address      = {Denver},
+  address      = {Denver, CO},
   organization = {IGSHPA},
   note         = {March 14--16},
 }
@@ -2365,16 +2365,17 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title        = {Performance evaluation of combined heat sources for innovative heat pumps -- ground source combined with an air coil},
   booktitle    = {CLIMA 2013},
   year         = {2013},
-  address      = {Prague},
+  address      = {Prague, Czech Republic},
   organization = {RHEVA},
   note         = {June 16--19},
 }
 
-@Book{EnergyPlus8.8,
-  title     = {{EnergyPlus\textsuperscript{TM}} version 8.8.0 documentation: engineering reference},
+@Book{EnergyPlus91,
+  title     = {{EnergyPlus\textsuperscript{TM}} version 9.1.0},
   publisher = {U.S. Department of Energy},
-  year      = {2017},
-  author    = {EnergyPlus},
+  year      = {2018},
+  author    = {DOE},
+  note      = {Retrieved June 6, 2019 from: https:// github.com/ NREL/ EnergyPlus/ releases/ tag/ v9.1.0},
 }
 
 @TechReport{Deru2011,
@@ -3391,7 +3392,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   booktitle    = {IGSHPA Research Conference Proceedings},
   year         = {2017},
   pages        = {192--200},
-  address      = {Denver},
+  address      = {Denver, CO},
   organization = {IGSHPA},
   note         = {March 14--16},
 }
@@ -3868,7 +3869,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   booktitle    = {IGSHPA Research Conference Proceedings},
   year         = {2017},
   pages        = {316--324},
-  address      = {Denver},
+  address      = {Denver, CO},
   organization = {IGSHPA},
   note         = {March 14--16},
 }
@@ -3884,12 +3885,12 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   note         = {May 12--14},
 }
 
-@InProceedings{GehlinSpitler2016,
+@InProceedings{GehlinSpitler2015,
   author    = {Singhild E. A. Gehlin and Jeffrey D. Spitler},
   title     = {Effects of ground heat exchanger design flow velocities on system performance of ground source heat pump systems in cold climates},
   booktitle = {ASHRAE Winter Conference},
-  year      = {2016},
-  address   = {Chicago},
+  year      = {2015},
+  address   = {Chicago, IL},
   note      = {January 23--27},
 }
 
@@ -4221,6 +4222,39 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   year    = {1931},
   volume  = {38},
   pages   = {2265--2279},
+}
+
+@Article{MORCHIO2019100363,
+  author   = {Stefano Morchio and Marco Fossa},
+  title    = {Thermal modeling of deep borehole heat exchangers for geothermal applications in densely populated urban areas},
+  journal  = {Thermal Science and Engineering Progress},
+  year     = {2019},
+  volume   = {In press},
+  issn     = {2451-9049},
+  abstract = {Ground coupled heat pumps are known as very energy efficient heating and cooling systems for a variety of building applications. In densely populated areas where new urbanization is intense, deep ground heat exchangers can be a valuable and effective solution for geothermal heat pump applications. In this paper a finite difference numerical model has been developed starting from literature contributions by Holmberg et al. (2016). The in house Fortran90 code has been built and validated to cope with variable longitudinal and radial mesh distribution for simulating coaxial pipe configurations. Different ground properties and geothermal gradients can be applied. Far field boundary conditions, ground pipe meshing and Courant numbers have been varied for enhancing the accuracy in predicting the fluid temperature evolution. The model has been extensively validated against analytical solutions and literature data. The model has been applied for analyzing the behavior of deep heat exchangers in the 500 to 800m range and the effects of the pipe diameter ratio have been investigated both in terms of fluid temperature evolution and pressure losses inside inner and annular pipes.},
+  doi      = {10.1016/j.tsep.2019.100363},
+  keywords = {ground coupled heat pumps, coaxial pipe geometry, deep borehole heat exchanger},
+  url      = {http://www.sciencedirect.com/science/article/pii/S2451904919301544},
+}
+
+@Article{KERME2019,
+  author   = {Esa Dube Kerme and Alan S. Fung},
+  title    = {Heat transfer simulation, analysis and performance study of single {U-tube} borehole heat exchanger},
+  journal  = {Renewable Energy},
+  year     = {2019},
+  volume   = {In press},
+  issn     = {0960-1481},
+  abstract = {This paper presents the analysis, simulation and performance study of heat transfer in a single U-tube borehole heat exchanger (BHE). Unsteady heat transfer method was used to analyze the heat transfer process of both inside and outside the borehole. Implicit numerical method applied on heat transfer equations obtained from energy balance (accompanied with thermal resistance model) was used to obtain the solution. The variation of mean fluid temperature, average borehole wall, grout and nearby ground temperature as well as borehole loading with borehole depth and time were investigated. Dynamic simulation was also performed to assess the influence of important parameters. The effect of two parameters, fluid mass flowrate and thermal conductivity of grout, on mean fluid temperature, borehole wall, grout and ground temperature as well as on borehole loading and borehole thermal effectiveness were investigated. The outcome of this study can substantially reduce the time devoted for research and to quickly determine the impact of various parameters on performance of vertical single U-tube borehole heat exchanger. Furthermore, the obtained result can be utilized as a reference for the design and optimization of heating and cooling system integrated with ground coupled heat pump system.},
+  doi      = {10.1016/j.renene.2019.06.004},
+  keywords = {borehole heat exchanger, heat transfer analysis, borehole wall temperature, grout temperature, borehole loading, borehole thermal effectiveness},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148119308171},
+}
+
+@Book{EnergyPlus8.8,
+  title     = {{EnergyPlus\textsuperscript{TM}} version 8.8.0 documentation: engineering reference},
+  publisher = {U.S. Department of Energy},
+  year      = {2017},
+  author    = {EnergyPlus},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
