--- a/References.bib
+++ b/References.bib
@@ -4257,4 +4257,14 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   author    = {EnergyPlus},
 }
 
+@Article{GustaffsonGehlin2008,
+  author  = {A.-M. Gustaffson and S. Gehlin},
+  title   = {Influence of natural convection in water-filled boreholes for {GCHP}},
+  journal = {ASHRAE Transactions},
+  year    = {2008},
+  volume  = {114},
+  number  = {1},
+  pages   = {416--423},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
