--- a/References.bib
+++ b/References.bib
@@ -4257,8 +4257,8 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   author    = {EnergyPlus},
 }
 
-@Article{GustaffsonGehlin2008,
-  author  = {A.-M. Gustaffson and S. Gehlin},
+@Article{GustaffssonGehlin2008,
+  author  = {Anna-Maria Gustaffsson and S. Gehlin},
   title   = {Influence of natural convection in water-filled boreholes for {GCHP}},
   journal = {ASHRAE Transactions},
   year    = {2008},
