--- a/References.bib
+++ b/References.bib
@@ -2355,7 +2355,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title        = {Modeling of short geothermal boreholes in series with experimental validation},
   booktitle    = {11\textsuperscript{th} IEA Heat Pump Conference},
   year         = {2014},
-  address      = {Montr{\'e}al, Qu{\'e}bec},
+  address      = {Montr{\'e}al, QC, Canada},
   organization = {International Energy Agency},
   note         = {May 12--16},
 }
@@ -2834,7 +2834,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title        = {Field test and evaluation of residential ground source heat pump systems using alternative vertical-bore ground heat exchangers},
   booktitle    = {11\textsuperscript{th} IEA Heat Pump Conference},
   year         = {2014},
-  address      = {Montr{\'e}al, Qu{\'e}bec},
+  address      = {Montr{\'e}al, QC, Canada},
   organization = {International Energy Agency},
   note         = {May 12--14},
   type         = {Conference Proceedings},
@@ -3720,7 +3720,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   title        = {Sizing and simulating geothermal bore fields using thermal response factors},
   booktitle    = {11\textsuperscript{th} IEA Heat Pump Conference},
   year         = {2014},
-  address      = {Montr{\'e}al, Qu{\'e}bec},
+  address      = {Montr{\'e}al, QC, Canada},
   organization = {International Energy Agency},
   note         = {May 12--14},
 }
@@ -3880,7 +3880,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   booktitle    = {11\textsuperscript{th} IEA Heat Pump Conference},
   year         = {2014},
   pages        = {12},
-  address      = {Montr{\'e}al, Qu{\'e}bec},
+  address      = {Montr{\'e}al, QC, Canada},
   organization = {International Energy Agency},
   note         = {May 12--14},
 }
@@ -4145,13 +4145,17 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   pages   = {558--567},
 }
 
-@Misc{pygfunction,
+@InProceedings{pygfunction,
   author       = {Massimo Cimmino},
-  title        = {pygfunction v1.1.0},
-  howpublished = {Zenodo},
+  title        = {pygfunction: an open-source toolbox for the evaluation of thermal response factors for geothermal borehole fields},
+  booktitle    = {Proceedings of eSim 2018, the 10\textsuperscript{th} conference of IBPSA-Canada},
   year         = {2018},
+  pages        = {492--501},
+  address      = {Montr{\'e}al, QC, Canada},
+  organization = {International Building Performance Simulation Association},
   note         = {10.5281/zenodo.1195040},
   doi          = {10.5281/zenodo.1195040},
+  howpublished = {Zenodo},
 }
 
 @InProceedings{AcunaFossaMonzoPalm2012,
@@ -4265,6 +4269,20 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   volume  = {114},
   number  = {1},
   pages   = {416--423},
+}
+
+@Article{FOSSA2020805,
+  author   = {M. Fossa and A. Priarone and F. Silenzi},
+  title    = {Superposition of the single point source solution to generate temperature response factors for geothermal piles},
+  journal  = {Renewable Energy},
+  year     = {2020},
+  volume   = {145},
+  pages    = {805--813},
+  issn     = {0960-1481},
+  abstract = {Geothermal piles are a very promising technique to exploit the low enthalpy resource for ground coupled heat pumps. In fact, they are heat exchangers integrated in the foundation structures of the buildings, with reduced need in term of ground surface availability and diminished drilling costs. Unfortunately, to evaluate the ground thermal response to their presence it is not possible to use classical analytical solutions due to their low aspect ratio and to the relevant effect of the heat capacity of the inner cylindrical volume. In addition, different shapes of the pipe arrangement are possible: helix around the foundation pile or a series of vertical pipes connected through U bends at top and bottom of the cylindrical volume. This study proposes a semi-analytical method to model ground heat exchangers with a great flexibility concerning their shape. The method, called Multiple Point Sources (MPS), applies the spatial superposition of the analytical solution for the Single Point Source. It has been validated by means of the comparison with literature analytical methods and FEM results for helix heat exchangers. Finally, it has been applied to find the temperature response factor for different shapes of heat exchanger in geothermal piles.},
+  doi      = {https://doi.org/10.1016/j.renene.2019.05.011},
+  keywords = {Ground coupled heat pumps, Geothermal piles, Temperature response factors, Superposition method},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148119306639},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
