--- a/References.bib
+++ b/References.bib
@@ -4285,4 +4285,13 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   url      = {http://www.sciencedirect.com/science/article/pii/S0960148119306639},
 }
 
+@Article{Duhamel1828,
+  author  = {M. J.-M.-C. Duhamel},
+  title   = {Sur les equations g\'en\'erales de la propagation de la chaleur dan les corps solides dont la conductiblit\'e n'est pas la m\^eme dan tous les sens},
+  journal = {Journal de l'Ecole Polytechnique},
+  year    = {1828},
+  volume  = {21},
+  pages   = {356--399},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
