--- a/References.bib
+++ b/References.bib
@@ -4294,4 +4294,12 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   pages   = {356--399},
 }
 
+@PhdThesis{Loveridge2012,
+  author  = {Fleur Loveridge},
+  title   = {The thermal performance of foundation piles used as heat exchangers in ground energy systems},
+  school  = {University of Southampton},
+  year    = {2012},
+  address = {Southampton, UK},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
