--- a/References.bib
+++ b/References.bib
@@ -4302,4 +4302,17 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   address = {Southampton, UK},
 }
 
+@InBook{Petukhov1970,
+  chapter   = {Heat transfer and friction in turbulent pipe flow with variable physical properties},
+  pages     = {503--564},
+  title     = {Advances in Heat Transfer},
+  publisher = {Academic Press, Inc.},
+  year      = {1970},
+  author    = {B. S. Petukhov},
+  editor    = {T. F. Irvine and J. P. Hartnett},
+  volume    = {6},
+  address   = {New York, NY},
+  journal   = {Advances in Heat Transfer},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
