--- a/References.bib
+++ b/References.bib
@@ -4315,4 +4315,19 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   journal   = {Advances in Heat Transfer},
 }
 
+@Article{en12102020,
+  author         = {Spitler, Jeffrey D. and Gehlin, Signhild},
+  title          = {Measured performance of a mixed-use commercial-building ground source heat pump system in {Sweden}},
+  journal        = {Energies},
+  year           = {2019},
+  volume         = {12},
+  number         = {10},
+  pages          = {34},
+  issn           = {1996-1073},
+  abstract       = {When the new student center at Stockholm University in Sweden was completed in the fall of 2013 it was thoroughly instrumented. The 6300 m2 four-story building with offices, a restaurant, study lounges, and meeting rooms was designed to be energy efficient with a planned total energy use of 25 kWh/m2/year. Space heating and hot water are provided by a ground source heat pump (GSHP) system consisting of five 40 kW off-the-shelf water-to-water heat pumps connected to 20 boreholes in hard rock, drilled to a depth of 200 m. Space cooling is provided by direct cooling from the boreholes. This paper uses measured performance data from Studenthuset to calculate the actual thermal performance of the GSHP system during one of its early years of operation. Monthly system coefficients-of-performance and coefficients-of-performance for both heating and cooling operation are presented. In the first months of operation, several problems were corrected, leading to improved performance. This paper provides long-term measured system performance data from a recently installed GSHP system, shows how the various system components affect the performance, presents an uncertainty analysis, and describes how some unanticipated consequences of the design may be ameliorated. Seasonal performance factors (SPF) are evaluated based on the SEPEMO (&ldquo;SEasonal PErformance factor and MOnitoring for heat pump systems&rdquo;) boundary schema. For heating (&ldquo;H&rdquo;), SPFs of 3.7 &plusmn; 0.2 and 2.7 &plusmn; 0.13 were obtained for boundaries H2 and H3, respectively. For cooling (&ldquo;C&rdquo;), a C2 SPF of 27 &plusmn; 5 was obtained. Results are compared to measured performance data from 55 GSHP systems serving commercial buildings that are reported in the literature.},
+  article-number = {2020},
+  doi            = {10.3390/en12102020},
+  url            = {https://www.mdpi.com/1996-1073/12/10/2020},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
