--- a/References.bib
+++ b/References.bib
@@ -4344,4 +4344,11 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   url            = {https://www.mdpi.com/1996-1073/11/1/214},
 }
 
+@Misc{Mitchell2019,
+  author = {Mitchell, M.},
+  title  = {Load profiles},
+  year   = {2019},
+  note   = {https://doi.org/10.6084/m9.figshare.8984243.v1},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
