--- a/References.bib
+++ b/References.bib
@@ -2723,15 +2723,14 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url     = {http://www.sciencedirect.com/science/article/pii/S0378778813004556},
 }
 
-@InProceedings{Henderson2000,
-  author    = {Henderson, Hugh I. Jr. and Khattar, Mukesh K. and Carlson, Steven W. P. E. and Walburger, Adam C.},
-  title     = {The implications of the measured performance of variable flow pumping systems in geothermal and water loop heat pump applications},
-  booktitle = {ASHRAE Transactions},
-  year      = {2000},
-  volume    = {106},
-  publisher = {ASHRAE},
-  type      = {Conference Proceedings},
-  url       = {https://search.proquest.com/openview/6326a95318d16a33642c572cff5d2e72/1?pq-origsite=gscholar&cbl=34619},
+@Article{Henderson2000,
+  author  = {Henderson, Hugh I. Jr. and Khattar, Mukesh K. and Carlson, Steven W. P. E. and Walburger, Adam C.},
+  title   = {The implications of the measured performance of variable flow pumping systems in geothermal and water loop heat pump applications},
+  journal = {ASHRAE Transactions},
+  year    = {2000},
+  volume  = {106},
+  pages   = {533--542},
+  url     = {https://search.proquest.com/openview/6326a95318d16a33642c572cff5d2e72/1?pq-origsite=gscholar&cbl=34619},
 }
 
 @Article{RN11,
@@ -2832,7 +2831,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{Liu2014,
   author       = {Liu, Xiaobing and Beier, Richard A. and Anderson, Michael and Ewbank, Garen N. and Munk, Jeff},
   title        = {Field test and evaluation of residential ground source heat pump systems using alternative vertical-bore ground heat exchangers},
-  booktitle    = {11\textsuperscript{th} IEA Heat Pump Conference},
+  booktitle    = {Proceedings of the 11\textsuperscript{th} IEA Heat Pump Conference},
   year         = {2014},
   address      = {Montr{\'e}al, QC, Canada},
   organization = {International Energy Agency},
@@ -2886,7 +2885,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{Mendrinos2016,
   author    = {Mendrinos, Dimitrios and Karytsas, Constantine},
   title     = {Monitoring results after 12 months of provision of heating and cooling at the 8 demonstration buildings of the {European project "Ground-Med}"},
-  booktitle = {European Geothermal Congress},
+  booktitle = {Proceedings of European Geothermal Congress},
   year      = {2016},
   pages     = {1--6},
   type      = {Conference Proceedings},
@@ -2907,7 +2906,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{Minea2013,
   author    = {Minea, Vasile},
   title     = {Multi-year validation of a residential ground-source heat pump system with vertical closed-loop heat exchanger},
-  booktitle = {11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
+  booktitle = {Proceedings of the 11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
   year      = {2013},
   note      = {June 16-19},
   type      = {Conference Proceedings},
@@ -2968,7 +2967,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{Sakata2013,
   author    = {Sakata, Takeru and Saito, Masaya and Kikuta, Koki and Omi, Yoshiki},
   title     = {A field measurement of the utilizing geothermal and external insulated house in winter season with energy and exergy analysis},
-  booktitle = {{11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings}},
+  booktitle = {Proceedings of the {11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings}},
   year      = {2013},
   note      = {June 16-19},
   type      = {Conference Proceedings},
@@ -3082,7 +3081,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{Winger2013,
   author    = {Winger, Simon and Kalz, Doreen and Sonntag, Martin and Vellei, Marika},
   title     = {Energy and efficiency analysis of heat pump systems in nonresidential buildings by means of long-term measurements},
-  booktitle = {11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
+  booktitle = {Proceedings of the 11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
   year      = {2013},
   type      = {Conference Proceedings},
 }
@@ -3122,7 +3121,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{SpitlerSouthardLiu2017,
   author       = {Jeffrey D. Spitler and Laura E. Southard and Xiaobing Liu},
   title        = {Ground-source and air-source heat pump system performance at the {ASHRAE} headquarters building},
-  booktitle    = {12\textsuperscript{th} IEA Heat Pump Conference},
+  booktitle    = {Proceedings of the 12\textsuperscript{th} IEA Heat Pump Conference},
   year         = {2017},
   address      = {Rotterdam, Netherlands},
   organization = {International Energy Agency},
@@ -3133,7 +3132,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{GehlinSpilterLarssonAnnsberg2018,
   author    = {Singhild E. A. Gehlin and Jeffrey D. Spitler and Anders Larsson and {\AA}ke Annsberg},
   title     = {Measured performance of the {University of Stockholm Studenthuset} ground source heat pump system},
-  booktitle = {14\textsuperscript{th} International Conference on Energy Storage-EnerSTOCK2018},
+  booktitle = {Proceedings of the 14\textsuperscript{th} International Conference on Energy Storage-EnerSTOCK2018},
   year      = {2018},
   pages     = {1--14},
   address   = {Adana, Turkey},
@@ -4349,6 +4348,24 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   title  = {Load profiles},
   year   = {2019},
   note   = {https://doi.org/10.6084/m9.figshare.8984243.v1},
+}
+
+@Conference{SpitlerWongGehlin2014,
+  author    = {J. D. Spitler and M. D. Wong and S. E. A. Gehlin},
+  title     = {Effect of residential ground source heat pump system design on {CO\textsubscript{2}} emissions in {Sweden}},
+  booktitle = {Proceedings of ASHRAE Annual Conference},
+  year      = {2014},
+  address   = {Seattle, WA},
+  note      = {June 28--July 2},
+}
+
+@InProceedings{GehlinSpitler2014,
+  author    = {S. Gehlin and J. D. Spitler},
+  title     = {A thermo-economic analysis of a residential ground-source heat pump system: one deeper vs. two shallower boreholes},
+  booktitle = {Proceedings of IEA Heat Pump Conference},
+  year      = {2014},
+  address   = {Montr{\'e}al, QC, Canada},
+  note      = {May 12--16},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
