--- a/References.bib
+++ b/References.bib
@@ -4368,4 +4368,10 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   note      = {May 12--16},
 }
 
+@Misc{Nordman2014,
+  author = {R. Nordman},
+  year   = {2014},
+  note   = {Research Institutes of Sweden. Email to S. Gehlin. September 1, 2014},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
