--- a/References.bib
+++ b/References.bib
@@ -1814,7 +1814,7 @@
   publisher = {Clarendon Press},
   year      = {1959},
   author    = {H. S. Carslaw and J. C. Jaeger},
-  address   = {Oxford},
+  address   = {London, UK},
   edition   = {2\textsuperscript{nd}},
 }
 
@@ -3258,13 +3258,13 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @Misc{PyPareto,
-  author       = {Matthew J. Woodruff and Jon Herman},
-  title        = {Pareto},
-  howpublished = {\url{https://github.com/matthewjwoodruff/pareto.py}},
-  year         = {2018},
-  commit       = {b3df7bb57c50a7bebb8eec40d5a1a415560216cc},
-  journal      = {GitHub repository},
-  publisher    = {GitHub},
+  author    = {Matthew J. Woodruff and Jon Herman},
+  title     = {Pareto},
+  year      = {2018},
+  note      = {https://github.com/matthewjwoodruff/pareto.py},
+  commit    = {b3df7bb57c50a7bebb8eec40d5a1a415560216cc},
+  journal   = {GitHub repository},
+  publisher = {GitHub},
 }
 
 @Article{Hanby2002,
