--- a/References.bib
+++ b/References.bib
@@ -4374,4 +4374,14 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   note   = {Research Institutes of Sweden. Email to S. Gehlin. September 1, 2014},
 }
 
+@Conference{MitchellSpitlerGehlinWGC2020,
+  author       = {Matt S. Mitchell and Jeffrey D. Spitler and Signhild E. A. Gehlin},
+  booktitle    = {World Geothermal Congress},
+  title        = {Use of cross g-functions to calculate Interference between ground heat exchangers used in ground-source heat pump systems},
+  year         = {2020},
+  address      = {Reykjavik, Iceland},
+  month        = apr,
+  organization = {International Geothermal Association},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
